<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:title="@string/my_profile" />
        <!--    android:icon="@drawable/ic_action_about"-->
        <item
            android:id="@+id/attendance"
            android:title="@string/attendance" />
        <item
            android:id="@+id/attendance_other"
            android:title="@string/attendance_other"/>
        <item
            android:id="@+id/update"
            android:title="@string/update_profile"/>
        <item
            android:id="@+id/track"
            android:title="@string/track_1"
            />
        <item
            android:id="@+id/inbox"
            android:title="@string/inbox"/>
        <!--<item-->
            <!--android:id="@+id/track_me"-->
            <!--android:title="@string/track"/>-->
    </group>


</menu>
